add new api functions
