# sys-backend/api/src/web/controllers/bibbox_controller.py
@@ -2,11 +2,10 @@ import connexion
 import six
 import json
 import sys  
-#from .. import util
 
 sys.path.insert(1, "/opt/bibbox/sys-bibbox/sys-backend")
-from bibboxbackend import AppController
-from bibboxbackend import MainFunctions
+from helperFunctions import AppController
+from mainFunctions import MainFunctions
 
 
 def listApps():  # noqa: E501
@@ -19,7 +18,6 @@ def listApps():  # noqa: E501
         response = controller.listApps(), 200
     except KeyError:
         response = {}, 404
-    #response = "hello"
 
     return response
 
@@ -36,7 +34,45 @@ def listInstalledApps():  # noqa: E501
         response = controller.listInstalledApps(), 200
     except KeyError:
         response = {}, 404
-    #response = "hello"
+
+    return response
+
+def startApp(instanceName):
+    """Start an app
+
+     
+    """
+    try:
+        controller = MainFunctions()
+        response = controller.startApp(instanceName), 200
+    except KeyError:
+        response = {}, 404
+
+    return response
+
+def stopApp(instanceName):
+    """Stop an app
+
+     
+    """
+    try:
+        controller = MainFunctions()
+        response = controller.stopApp(instanceName), 200
+    except KeyError:
+        response = {}, 404
+
+    return response
+
+def removeApp(instanceName):
+    """Start an app
+
+     
+    """
+    try:
+        controller = MainFunctions()
+        response = controller.removeApp(instanceName), 200
+    except KeyError:
+        response = {}, 404
 
     return response
 
